Event,EventDetail,Course,CourseDetail,Event,EventDetail,Post models and their relations is created

--- a/ProjectBackend/Views/Teacher/TeacherIndex.cshtml
+++ b/ProjectBackend/Views/Teacher/TeacherIndex.cshtml
@@ -1,4 +1,9 @@
-﻿<!-- Banner Area Start -->
+﻿
+@{
+    ViewData["Title"] = "TeacherIndex";
+}
+
+<!-- Banner Area Start -->
 <div class="banner-area-wrapper">
     <div class="banner-area text-center">
         <div class="container">
