SomeChanges in  HomeController and HomeViewModel and NoticeVieo,NoticeBoard Models is created

--- a/ProjectBackend/Views/Home/Index.cshtml
+++ b/ProjectBackend/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <section id="slider-container" class="slider-area two">
     <div class="slider-owl owl-theme owl-carousel">
         <!-- Start Slingle Slide -->
-        <div class="single-slide item" style="background-image: url(/img/slider/@homeViewModel.Slider.Image)">
+        <div class="single-slide item" style="background-image: url(~/img/slider/@homeViewModel.Slider.Image) ">
             <!-- Start Slider Content -->
             <div class="slider-content-area">
                 <div class="container">
@@ -16,9 +16,9 @@
                         <div class="col-md-10 col-md-offset-1">
                             <div class="slide-content-wrapper">
                                 <div class="slide-content text-center">
-                                  @Html.Raw(homeViewModel.Slider.Title)
-                                 <p>I must explain to you how all this mistaken idea of denouncing pleasure and prsing pain was born and I will give you a complete account of the system  </p>
-                                    <a class="default-btn" asp-controller="About">Learn more</a>
+                                    @Html.Raw(homeViewModel.Slider.Title)
+                                    <p>I must explain to you how all this mistaken idea of denouncing pleasure and prsing pain was born and I will give you a complete account of the system  </p>
+                                    <a class="default-btn" href="about.html">Learn more</a>
                                 </div>
                             </div>
                         </div>
@@ -29,48 +29,47 @@
         </div>
         <!-- End Slingle Slide -->
         <!-- Start Slingle Slide -->
-        <!--<div class="single-slide item" style="background-image: url(~/img/slider/slider3.jpg)">-->
+        <!--<div class="single-slide item" style="background-image: url(~/img/slider/homeViewModel.Slider.Image)">
             <!-- Start Slider Content -->
             <!--<div class="slider-content-area">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-10 col-md-offset-1">
                             <div class="slide-content-wrapper">
-                                <div class="slide-content text-center">  GMNT
-                                    <h2>EDUCATION MAKES HUMANITY </h2>
-                                    <p>I must explain to you how all this mistaken idea of denouncing pleasure and prsing pain was born and I will give you a complete account of the system  </p>
-                                    <a class="default-btn" asp-controller="About">Learn more</a>
+                                <div class="slide-content text-center">  
+                                       @Html.Raw(homeViewModel.Slider.Title)
+                                   homeViewModel.Slider.Subtitle
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>-->gfda.......
-            <!-- Start Slider Content -->
-        </div>
-        <!-- End Slingle Slide -->
-        <!-- Start Slingle Slide -->
-        <!--<div class="single-slide item" style="background-image: url(~/img/slider/slider1.jpg)">-->
-            <!-- Start Slider Content -->
-            <!--<div class="slider-content-area">
+            </div>gfda.......
+             Start Slider Content 
+        </div>-->
+         @*End Slingle Slide 
+         Start Slingle Slide*@ 
+        @*<div class="single-slide item" style="background-image: url(~/img/slider/homeViewModel.Slider.Image">
+             Start Slider Content 
+            <div class="slider-content-area">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-10 col-md-offset-1">
                             <div class="slide-content-wrapper">
                                 <div class="slide-content text-center">
-                                    <h2>EDUCATION MAKES HUMANITY </h2>
-                                    <p>I must explain to you how all this mistaken idea of denouncing pleasure and prsing pain was born and I will give you a complete account of the system  </p>
+                                    @Html.Raw(homeViewModel.Slider.Title)
+                                    homeViewModel.Slider.Subtitle
                                     <a class="default-btn" asp-controller="About">Learn more</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>-->
-            <!-- Start Slider Content -->
-        @*</div>*@
-        <!-- End Slingle Slide -->
-    @*</div>*@
+            </div>-->*@
+             @*Start Slider Content*@ 
+        </div>
+         @*End Slingle Slide*@ 
+    </div>
 </section>
 <!-- Background Area End -->
 <!-- About Start -->
