--- a/ProjectBackend/Views/Shared/_Layout.cshtml
+++ b/ProjectBackend/Views/Shared/_Layout.cshtml
@@ -79,17 +79,17 @@
                                         <li>
                                             <a href="course.html">courses</a>
                                             <ul>
-                                                <li><a href="course.html">courses</a></li>
-                                                <li><a href="course-details.html">courses details</a></li>
+                                                <li><a asp-controller="CourseController">courses</a></li>
+                                                <li><a asp-controller="CourseDetailController">courses details</a></li>
                                             </ul>
                                         </li>
                                         <li>
                                             <a href="event.html">event</a>
                                             <ul>
-                                                <li><a href="event.html">event</a></li>
-                                                <li><a href="event-left-side-bar.html">event left sidebar</a></li>
-                                                <li><a href="event-right-side-bar.html">event right sidebar</a></li>
-                                                <li><a href="event-details.html">event details</a></li>
+                                                <li><a asp-controller="Event">event</a></li>
+                                                <li><a asp-controller="Event">event left sidebar</a></li>
+                                                <li><a asp-controller="EventDetail">event right sidebar</a></li>
+                                                <li><a asp-controller="EventDetail">event details</a></li>
                                             </ul>
                                         </li>
                                         <li class="hidden-sm">
@@ -102,13 +102,13 @@
                                         <li>
                                             <a href="blog.html">blog</a>
                                             <ul>
-                                                <li><a href="blog.html">blog</a></li>
-                                                <li><a href="blog-left-side-bar.html">blog left sidebar</a></li>
-                                                <li><a href="blog-right-side-bar.html">blog righ sidebar</a></li>
-                                                <li><a href="blog-details.html">blog details</a></li>
+                                                <li><a asp-controller="BlogController">blog</a></li>
+                                                <li><a asp-controller="BlogDetailController">blog left sidebar</a></li>
+                                                <li><a asp-controller="BlogDetailController">blog righ sidebar</a></li>
+                                                <li><a asp-controller="BlogDetailController">blog details</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a >Contact</a></li>
                                         <li><a href="#">Buy Now</a>
                                     </ul>
                                 </nav>
