--- a/ProjectBackend/Views/_ViewImports.cshtml
+++ b/ProjectBackend/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using ProjectBackend;
 @using ProjectBackend.Models;
-@using ProjectBackend.ViewModels;'
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers;
+@using ProjectBackend.ViewModels
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
